--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "playwright-test-coverage-native",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Extends Playwright for measuring code-coverage (built-in v8 coverage, no Istanbul)",
   "keywords": [
     "playwright",
     "coverage",
     "v8"
   ],
+  "repository": "github:FNNDSC/playwright-test-coverage-native",
   "author": "FNNDSC <dev@babyMRI.org>",
   "license": "MIT",
   "devDependencies": {
